Corrección final de estilos para la barra lateral

--- a/css/home.css
+++ b/css/home.css
@@ -46,7 +46,8 @@
     background-color: var(--light-bgcolor);
   }
   
-  .tweet--icons{
+  .tweet--icons,
+  .bi-check-circle-fill{
     color: var(--main-color);
   }
   
