--- a/css/comment.css
+++ b/css/comment.css
@@ -46,7 +46,8 @@ textarea:focus, input:focus, input:active{
     background-color: var(--light-bgcolor);
 }
 
-.tweet--icons{
+.tweet--icons,
+.bi-check-circle-fill{
     color: var(--main-color);
 }
 
